--- a/index.html
+++ b/index.html
@@ -24,29 +24,9 @@
                 Saepe eius ad in dicta reiciendis quo perspiciatis
                 explicabo iusto quae, doloremque culpa voluptas repellat
                 tempore labore vitae cupiditate fugit, eveniet maiores Lorem ipsum, dolor sit amet consectetur
-                adipisicing elit. Quis dolorem veniam vitae illum officiis, quidem unde similique impedit maiores
-                voluptates cumque magni commodi voluptate aperiam laudantium, iusto quasi vel? Totam numquam iste odio
-                consequatur beatae facere laboriosam consectetur repudiandae distinctio reprehenderit omnis sunt
-                praesentium, enim veniam ducimus illum eum modi velit. Suscipit, optio, modi neque debitis temporibus
-                sit expedita architecto nihil error quod repellendus omnis distinctio recusandae. Magnam, amet in!
-                Soluta, cum cupiditate! Saepe animi, ut ipsum pariatur vitae rerum eaque illum exercitationem id,
-                dignissimos voluptatem soluta modi, dolores fugiat! Dicta, cupiditate veniam perspiciatis adipisci
-                facere voluptas ipsum, temporibus praesentium, quasi inventore perferendis quia. Sequi, numquam
-                voluptatem distinctio eum unde, atque minima quod totam vel delectus, hic nemo dolores? Temporibus
-                voluptatem suscipit asperiores saepe, nam dicta omnis pariatur molestias, minima ut aut natus odio ipsam
-                quasi at tempore. Suscipit molestias provident debitis adipisci eligendi voluptas porro esse vitae
-                labore officiis eos ratione, explicabo, iste amet, illo quo nesciunt fuga rerum cupiditate ad! Sed totam
-                laborum commodi at, ab distinctio illum. Quidem obcaecati quia natus labore eum eos nam nesciunt nisi et
-                maxime, recusandae ea. Aliquid labore, iste odit reprehenderit reiciendis ipsum voluptate provident
+                adipisicing elit.  Aliquid labore, iste odit reprehenderit reiciendis ipsum voluptate provident
                 accusamus laboriosam blanditiis velit necessitatibus excepturi assumenda sapiente minima pariatur beatae
-                quia commodi possimus! Soluta similique recusandae illo ex inventore ea quae eveniet placeat deleniti?
-                Iusto repellendus veritatis eius obcaecati consectetur veniam porro commodi vero deleniti qui assumenda
-                rerum cupiditate suscipit ex voluptatum dignissimos repudiandae odio nihil, ut cum incidunt iure. At
-                minus corporis laboriosam nihil quisquam nam, veritatis quos atque aut libero est enim nostrum quis
-                deserunt illum? Laudantium sunt architecto voluptate nisi. Tempora voluptatem id perspiciatis voluptates
-                eum, libero praesentium. Ipsam, temporibus quo rerum velit voluptatum reprehenderit minima cumque amet.
-                Dolorum, totam autem eaque ipsum repellat nostrum molestias consequatur omnis delectus, doloribus eos
-                voluptas! </p>
+                quia commodi possimus! </p>
             <img src="./img/destaque.webp" alt="pessoas em um saguão sentadas em uma mesa">
             <h1>Lorem, ipsum dolor.</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias reiciendis
