--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
                 error voluptatem quo ea illo harum facilis ipsam. Ex corporis incidunt repellendus cumque eius alias,
                 libero consequuntur nihil totam iure vero veritatis repudiandae voluptatem similique perspiciatis
                 facilis at amet optio ducimus esse, quam magni sit rerum? </p>
-            <p><link rel="shortcut icon" href="https://www.youtube.com/s/desktop/d743f786/img/favicon.ico" type="image/x-icon"> <!-- Compatibilidade com Browser muito antigos-->
-                <link rel="icon" href="https://www.youtube.com/s/desktop/d743f786/img/favicon_32.png" sizes="32x32">  </p>
+            <p>
+                <a href="https://www.youtube.com/br" >Site do youtube<
+            </p>
+            
     </main>
 
 
