"junto com o prof"

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 Saepe eius ad in dicta reiciendis quo perspiciatis
                 explicabo iusto quae, doloremque culpa voluptas repellat
                 tempore labore vitae cupiditate fugit, eveniet maiores Lorem ipsum, dolor sit amet consectetur
-                adipisicing elit.  Aliquid labore, iste odit reprehenderit reiciendis ipsum voluptate provident
+                adipisicing elit. Aliquid labore, iste odit reprehenderit reiciendis ipsum voluptate provident
                 accusamus laboriosam blanditiis velit necessitatibus excepturi assumenda sapiente minima pariatur beatae
                 quia commodi possimus! </p>
-            <img src="./img/destaque.webp" alt="pessoas em um saguão sentadas em uma mesa">
+            <img class="destaque" src="./img/destaque.webp" alt="pessoas em um saguão sentadas em uma mesa">
             <h2>Lorem, ipsum dolor.</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias reiciendis
                 vero dignissimos excepturi illum earum ut cupiditate in, sunt et temporibus vitae corporis!</p>
@@ -62,11 +62,15 @@
                 libero consequuntur nihil totam iure vero veritatis repudiandae voluptatem similique perspiciatis
                 facilis at amet optio ducimus esse, quam magni sit rerum? </p>
             <p>
-                <a href="https://www.youtube.com/br" >Site do youtube<
-            </p>
-            
-    </main>
+                >
 
+    </main>
+    <footer>
+        <img src="./img/facebook.svg" alt=" icone do facebook">
+        <img src="./img/instagram.svg" alt="icone do instagram">
+        <img src="./img/linkedin.svg" alt="icone do linkein">
+        <img src="./img/youtube.svg" alt="icone do youtube">
+    </footer>
 
 </body>
 
